# voxel

./: .gitignore  .pdm-python  README.md  pyproject.toml
src/voxel/acquisition/: acquisition.py
src/voxel/descriptors/: deliminated_property.py
src/voxel/devices/: base.py
src/voxel/devices/aotf/: aaopto.py  base.py
src/voxel/devices/aotf/aaopto/: aotfnc.py
src/voxel/devices/camera/: README.md  base.py  hamamatsu.py  hamamatsu_dcam.py  pco.py  pco_camera.py  simulated.py  vieworks_egrabber.py  ximea.py
src/voxel/devices/camera/acquire/hamamatsu_acquire/: camera_hamamatsu_acquire.py  test_hamamatsu_acquire_camera.py
src/voxel/devices/camera/acquire/vieworks_acquire/: camera_vieworks_acquire.py
src/voxel/devices/camera/hamamatsu/: dcam.py
src/voxel/devices/camera/sdks/dcam/: dcamapi4.py
src/voxel/devices/camera/sdks/pco/: camera.py  convert.py  flim.py  logging.py  recorder.py  sdk.py
src/voxel/devices/camera/vieworks/: egrabber.py
src/voxel/devices/camera/ximea/: xiapi.py
src/voxel/devices/daq/: base.py  ni.py  simulated.py
src/voxel/devices/filter/: asi.py  base.py  ni.py  simulated.py
src/voxel/devices/filterwheel/: asi.py  base.py  ni.py  simulated.py
src/voxel/devices/filterwheel/asi/: fw1000.py
src/voxel/devices/flip_mount/: base.py  simulated.py  thorlabs_mff101.py
src/voxel/devices/flip_mount/asi/: tiger.py
src/voxel/devices/flip_mount/thorlabs/: mff101.py
src/voxel/devices/joystick/: asi.py  base.py
src/voxel/devices/laser/: base.py  simulated.py
src/voxel/devices/laser/cobolt/: skyra.py
src/voxel/devices/laser/coherent/: genesis_mx.py  obis_ls.py  obis_lx.py
src/voxel/devices/laser/oxxius/: lbx.py  lcx.py  oxxius_lbx.py  oxxius_lcx.py
src/voxel/devices/laser/vortran/: stradus.py
src/voxel/devices/power_meter/: README.md  base.py  simulated.py  thorlabs_pm100.py
src/voxel/devices/rotation_mount/: thorlabs_k10cr1.py
src/voxel/devices/stage/: asi.py  base.py  simulated.py
src/voxel/devices/stage/asi/: tiger.py
src/voxel/devices/temperature_sensor/thorlabs/: tsp0b1.py
src/voxel/devices/tunable_lens/: asi.py  base.py  optotune_ele4i.py  optotune_icc4c.py
src/voxel/devices/tunable_lens/asi/: tgtlc.py
src/voxel/devices/utils/: singleton.py
src/voxel/file_transfers/: base.py  robocopy.py  robocopy_zarr.py  rsync.py
src/voxel/instruments/: instrument.py
src/voxel/metadata/: base.py  metadata_class.py
src/voxel/processes/: histogram.py
src/voxel/processes/downsample/: base.py
src/voxel/processes/downsample/cpu/numpy/: downsample_2d.py  downsample_3d.py
src/voxel/processes/downsample/cpu/tensorstore/: downsample_2d.py  downsample_3d.py
src/voxel/processes/downsample/gpu/clesperanto/: downsample_2d.py  downsample_3d.py
src/voxel/processes/downsample/gpu/cucim/: downsample_2d.py  downsample_3d.py
src/voxel/processes/downsample/gpu/gputools/: downsample_2d.py  downsample_3d.py  rank_downsample_2d.py  rank_downsample_3d.py
src/voxel/processes/max_projection/cpu/: numpy.py
src/voxel/processes/max_projection/gpu/: pyclesperanto.py
src/voxel/writers/: base.py  bdv.py  imaris.py  tiff.py  zarr.py
src/voxel/writers/bdv_writer/: npy2bdv.py
src/voxel/writers/data_structures/: shared_double_buffer.py
